--- a/public/index.html
+++ b/public/index.html
@@ -103,8 +103,8 @@
                                 <a href="tel:&#43;12%2034%20567%2089%2001" target="_blank" style="opacity: 1;"><i
                                         class='fas fa-2x fa-phone'></i></a>
 
-                                <a href="https://github.com/devcows/hugo-universal-theme" target="_blank"
-                                    style="opacity: 1;"><i class='fab fa-2x fa-github'></i></a>
+                                <a href="https://github.com/" target="_blank" style="opacity: 1;"><i
+                                        class='fab fa-2x fa-github'></i></a>
 
                                 <a href="http://facebook.com" target="_blank" style="opacity: 1;"><i
                                         class='fab fa-2x fa-facebook'></i></a>
