add owners page and update build

--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -13,7 +13,7 @@
 
 
 
-<meta name="keywords" content="Tech, Sites, WebSites, FAQ, How do I, questions, what if">
+<meta name="keywords" content="Tech, Sites, WebSites, Noticias, How do I, questions, what if">
 
 
 <meta name="description" content="Frequently asked questions">
@@ -36,7 +36,7 @@
 
 
 
-<link href="/css/custom.css?1658976497" rel="stylesheet">
+<link href="/css/custom.css?1662695680" rel="stylesheet">
 
 
 
